# plot-saver

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/plot_saver/: __init__.py  anywidget_compat.py  config.py  figure_save_widget.css  figure_save_widget.js  save_widget.py
src/plot_saver/resources/: default_config.toml
tests/: test_save_widget_commands.py
