[project]
name = "plot-saver"
version = "0.1.1"
description = "Reusable anywidget plot saver configurable with a config.toml."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.10.0",
    "marimo>=0.21.1",
    "traitlets>=5.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plot_saver"]
